2007-09-10  Helmut Eller  <helmut@localhost>

	* swank-sbcl.lisp (condition-references): It's still needed.

	* slime.el (sldb-dispatch-extras): Add missing quote.

2007-09-10  Helmut Eller  <heller@common-lisp.net>

	Move SBCL doc references to contrib.

	* slime.el (sldb-insert-condition): Merge REFERENCES and EXTRAS.
	(sldb-extras-hooks, sldb-dispatch-extras): New hook.

	* swank-backend.lisp (condition-references): Removed. Merged with
	condition-extras.

	* swank-sbcl.lisp (condition-references): Removed.
	(condition-extras): Include references.
	(externalize-reference): New function.  Don't return plain
	symbols.

	* swank-allegro.lisp (condition-references): Removed.

2007-09-10  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-cl-symbol-name, slime-cl-symbol-package):
	Ressurected, as they're still used in this file. 
	Reported by Edward Cant.

2007-09-10  Tobias C. Rittweiler  <tcr@freebits.de>

	When working on multiple source trees simultaneously, the way
	`slime-edit-definition' (M-.) works can sometimes be confusing:

	`M-.' visits locations that are present in the current Lisp image,
	which works perfectly well as long as the image reflects the
	source tree that one is currently looking at.

	In the other case, however, one can easily end up visiting a file
	in a different source root directory (the one corresponding to the
	Lisp image), and is thus easily tricked to modify the wrong source
	files---which can lead to quite some stressfull cursing.

	If the variable `slime-warn-when-possibly-tricked-by-M-.' is
	T (the default), a warning message is issued to raise the user's
	attention whenever `M-.' is about opening a file in a different
	source root that also exists in the source root directory of the
	user's _current buffer_.

	There's no guarantee that all possible cases are covered, but if
	you encounter such a warning, it's a strong indication that you
	should check twice before modifying.
	