@@ -5,7 +5,8 @@
 	* slime-references.el (sldb-reference-face): Add missing quote.
 	(sldb-reference-properties): We are lucky and can use keywords
 	instead of strings.
-
+	(sldb-maybe-insert-references): Insert newlines differently.
+	
 2007-09-10  Helmut Eller  <heller@common-lisp.net>
 
 	Move SBCL doc references to contrib.
